--- a/css/style.css
+++ b/css/style.css
@@ -573,6 +573,12 @@ footer h4,
     margin-top: 40px;
     width: 600px;
   }
+  /*- Icons -*/
+  .contact-phone img,
+  .contact-email img {
+    width: 17px;
+    height: 17px;
+  }
   /*-----  Phone & Email  -----*/
   .contact-phone p,
   .contact-email p,
@@ -722,6 +728,7 @@ footer h4,
     /* font-size: 1.56em; */
     font-size: 1.8em;
     /* margin-top: 15px; */
+    margin-top: 25px;
   }
   .project-text {
     /* line-height: 1.3; */
@@ -730,34 +737,16 @@ footer h4,
     /* font-size: 1.02em; */
     font-size: 1.18em;
   }
-
-
-
-  
-/*****************************************************************************------ MARKER*/
   /*----  Bio & Contact  ----*/
   #bio p {
-    /* margin: 22px auto 0 auto;
-    line-height: 1.4;
-    font-style: italic;
-    font-size: 1.13em;
-    max-width: 900px; */
+    max-width: 1175px;
+    font-size: 1.23em;
   }
-  #contact {
-    /* border: 1px solid black; */
-  }
+
   .contact-intro {
-    /* margin: 22px auto 0 auto;
-    font-size: 1.13em;
-    line-height: 1.35;
-    width: 85%; */
+    font-size: 1.23em;
   }
-  .phone-email-wrapper {
-    /* display: flex;
-    justify-content: space-between;
-    margin: 40px auto 0 auto;
-    width: 600px; */
-  }
+
   /*-----  Phone & Email  -----*/
   .contact-phone,
   .contact-email {
@@ -768,19 +757,11 @@ footer h4,
     /* width: fit-content;
     margin: 0; */
   }
-  .contact-phone {
-    /* margin: 30px auto 0 auto; */
-    /* margin: 0; */
-  }
-  .contact-email {
-    /* margin: 15px auto 0 auto; */
-    /* margin: 0; */
-  }
   /*- Icons -*/
   .contact-phone img,
   .contact-email img {
-    /* width: 15px;
-    height: 15px; */
+    width: 23px;
+    height: 23px;
   }
   .contact-phone p,
   .contact-email p,
@@ -788,20 +769,20 @@ footer h4,
   .contact-email a {
     /* padding-left: 5px; */
     /* font-size: 1.13em; */
+    padding-left: 8px;
+    font-size: 1.23em;
   }
+
+
+
+/*****************************************************************************------ MARKER*/
   /*----  Footer Menu  ----*/
-  footer {
-    /* margin-top: 50px;
-    padding: 30px 4%;
-    border-top: 1px solid rgba(168, 168, 168, 0.418);
-    display: flex;
-    justify-content: space-between; */
-  }
   footer h4,
   .nav-section_2 {
     /* color: #353535;
     font-size: 1.5em;
     font-weight: 400; */
+    font-size: 1.65em;
   }
   .back-to-top,
   .back-to-top * {
@@ -817,5 +798,10 @@ footer h4,
     justify-content: space-between;
     width: 50%;
     max-width: 388px; */
+    max-width: 450px;
   }
+
+
+
+  
 }
